mandelbrot day one completed
concentrate on getting pgm data out and using feh to see if we are
writing correct data out

see common lisp mandelbrot version